add dev api key

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "serve": "firebase serve --only hosting,functions",
-        "build": "rmdir /s /q public && cd delfai-react && npm run build && cd ..",
-        "start": "cd delfai-react && npm start && cd .."
+        "start": "cd delfai-react && npm start && cd ..",
+        "build": "build.bat"
     },
     "author": "",
     "license": "ISC",
