--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
+    "openai": "^4.11.1",
     "stripe": "^13.3.0"
   },
   "devDependencies": {
