--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "delfai",
-    "homepage": ".",
+    "homepage": "/home",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
