--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "eject": "react-scripts eject",
         "client": "npm run start",
         "firebase": "firebase serve --only hosting",
-        "deploy": "deploy.bat"
+        "deploy": "PowerShell.exe -command .\\deploy.ps1"
     },
     "eslintConfig": {
         "extends": [
